Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/Smalltalk.tex
+++ b/Smalltalk.tex
@@ -1,2 +1,15 @@
 \input{header}
 
+\title{\Large{\texttt{Современный\\\st}}}
+\author{Dmitry Ponyatov \email{dponyatov@gmail.com}}
+
+\begin{document}
+
+\maketitle
+
+\tableofcontents
+
+\vspace{1cm}
+\url{https://github.com/ponyatov/TAoPicat/releases/latest}
+
+\end{document}
