Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/Smalltalk.tex
+++ b/Smalltalk.tex
@@ -1,6 +1,6 @@
 \input{header}
 
-\title{\Large{\texttt{Современный\\\st}}}
+\title{\LARGE{\texttt{современный \st}}}
 \author{Dmitry Ponyatov \email{dponyatov@gmail.com}}
 
 \begin{document}
@@ -8,8 +8,15 @@
 \maketitle
 
 \tableofcontents
+\secdown
 
 \vspace{1cm}
-\url{https://github.com/ponyatov/TAoPicat/releases/latest}
+\url{https://github.com/ponyatov/Smalltalk/releases/latest}
 
+\input{intro}
+\input{install}
+
+\input{meta/meta}
+
+\input{bib}
 \end{document}
