--- a/header.tex
+++ b/header.tex
@@ -59,6 +59,10 @@ commentstyle=\color{blue}\textbf
 
 %% languages
 \newcommand{\st}{\texttt{Smalltalk}}
+\newcommand{\ph}{\texttt{Pharo}}
+\newcommand{\fl}{\texttt{FLProg}}
+\newcommand{\win}{\texttt{Windows}}
+\newcommand{\linux}{\texttt{Linux}}
 
 % [nosep] option in lists/enums
 \usepackage{enumitem}
@@ -66,6 +70,6 @@ commentstyle=\color{blue}\textbf
 \usepackage{framed}
 % misc
 \newcommand{\email}[1]{$<$\href{mailto:#1}{#1}$>$}
-\renewcommand{\emph}[1]{\textcolor{red}{#1}}
+\renewcommand{\emph}[1]{\textcolor{blue}{#1}}
 \newcommand{\term}[1]{\textcolor{green}{#1}}
 \newcommand{\note}[1]{\,\footnote{\ #1}}
