Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/bib.tex
+++ b/bib.tex
@@ -1,16 +1,50 @@
 \begin{thebibliography}{9}\addcontentsline{toc}{section}{Литература}
 
-\bibitem{kir} \emph{Объектно-ориентированное программирование. Язык \st}\\
-Ю.А.Кирютенко, В.А.Савельев
+\clearpage
+\bibitem{kir} \fig{img/kir.jpeg}{height=.75\textheight}\\
+\emph{Объектно-ориентированное программирование. Язык \st}\\
+Ю.А.Кирютенко, В.А.Савельев\\
+\url{https://www.ozon.ru/context/detail/id/149878112/}
+
+\clearpage
+\bibitem{lesnevsky} \fig{img/lesnevsky.png}{height=.75\textheight}\\
+\emph{Объектно-ориентированное программирование для начинающих}\\
+А.С.Лесневский\\
+\url{https://www.ozon.ru/context/detail/id/27465528/}
 
 \clearpage
 
-\bibitem{inside1} \emph{Inside \st}\ Volume I\\
+\url{http://stephane.ducasse.free.fr/FreeBooks/}
+
+\bibitem{blue} \fig{img/blue.jpg}{height=.6\textheight}\\
+\emph{Smalltalk-80: The Language and its Implementation}\\
+Adele Goldberg and DavidRobson\\
+Xerox Palo Alto Research Center ISBN 0-201-11371-6. 344 pp. 1983
+
+\bibitem{red} \fig{img/red.png}{height=.25\textheight}\\
+\emph{Smalltalk-80, The Interactive Programming Environment}\\
+Adele Goldberg\\
+ISBN 0201113724. 560 pp. 1983
+
+\bibitem{green} \fig{img/green.png}{height=.25\textheight}\\
+\emph{Smalltalk-80, Bits of History, Words of Advice}\\
+Glen Krasner, Editor\\
+ISBN 0-201-11669-3. 344 pp. 1983
+
+\clearpage
+\bibitem{inside1}  \fig{img/inside1.png}{height=.75\textheight}\\
+\emph{Inside \st}\ Volume I\\
 Wilf R. Lalonde, John R. Pugh\\
 School of Computer Science, Carleton University
 
-\bibitem{inside2} \emph{Inside \st}\ Volume II\\
+\bibitem{inside2}  \fig{img/inside2.png}{height=.75\textheight}\\
+\emph{Inside \st}\ Volume II\\
 Wilf R. Lalonde, John R. Pugh\\
 School of Computer Science, Carleton University
+
+\bibitem{little} \fig{img/little.jpeg}{height=.75\textheight}\\
+\emph{A Little Smalltalk}\\
+Tim Budd\\
+Addison-Wesley 1987.
 
 \end{thebibliography}
