--- a/install.tex
+++ b/install.tex
@@ -1,9 +1,87 @@
 \clearpage
 \secly{Установка}\label{install}
 
+\subsecly{\linux}
+
 \begin{verbatim}
+# Debian GNU/Linux v.9 stretch x86_64
 $ cd ~
 ~$ git clone -o gh https://github.com/ponyatov/Smalltalk.git
 ~$ cd Smalltalk
 ~/Smalltalk$ make install
+~/Smalltalk$ ./pharo.rc
 \end{verbatim}
+\lst{pharo.rc}{pharo.rc}
+
+\subsecly{\ph: системные файлы (после прочтения съесть!)}\label{image}
+
+Базовая установка \ph\ состоит из четырех компонентов:
+
+\begin{description}
+    \item{виртуальная машина (VM)}\\ только этот компонент отличается для разных \term{хост-ОС}, это исполняющая система аналогичная JVM.
+    Оригинальный \st\ интерпретировал \term{байт-код}, в который компилируются куски кода. \ph\ комплектуется
+    \href{http://www.mirandabanda.org/cogblog/about-cog/}{CogVM}, быстрой виртуальной машиной,
+    использующей оптимизации и компиляцию в машинный код (JIT)
+
+    \begin{tabular}{l l}
+    \verb|pharo.exe| & для \win\\
+    \verb|pharo|     & \linux\\
+    \verb|Pharo.app| & OSX\\
+    \end{tabular}
+
+    Есть две версии\ --- 32- и 64-битные, между собой не совместимы, требуют установки соответствующих \verb|.image| файлов (далее)
+
+    \item{\verb|.image|}\\ бинарный образ запущенной \st-системы (образ памяти виртуальной машины). Файл хранит полный снимок состояния
+    всех объектов в системе, формат не зависит от \term{хост-платформы}, поэтому вы можете работать с вашими данными в \win\ и \linux\ перетаскивая
+    image-файлы между компьютерами (на флешке или через сетевую синхронизацию).
+
+    По поводу \term{файлов образов} вместо исходного кода в текстовых файлах периодически возникают споры,
+    что их использование было одной из причин того что \st\ умер в конце 90х на фоне взлета \cpp\ и \java.
+    Если рассматривать \st\ как \emph{объектную операционную систему}, \textit{а не язык программирования}, все встает на свои места. А для резервного
+    копирования ваших проектов, и обмена исходным кодом между разработчиками предусмотрены другие средства, в том числе и использование \git\ через
+    файловую систему.
+
+    С точки зрения пользователя использование образа системы очень удобно: если вы завершаете работу ВМ с сохранением, и потом перезапускаете ее
+    на следующий день, состояние системы восстанавливается полностью, с точностью до пикселя экрана, положения курсора, запущенных процессов,
+    и значений всех переменных\note{кроме объектов, состояние которых связано с системным временем, или перезапускается при старте виртуальной машины}.
+
+    \item{\verb|.sources|}\\ файл исходников содержит \emph{полный исходный код \ph\ и библиотек}, включенных в релиз системы.
+    Наличие файла исходников важно, так как .image-файл включает только объекты и откомпилированный байт-код их методов, но не хранит
+    исходный код этих методов. Обычно .sources-файл создается один раз при релизе следующей версии системы \ph, например
+    \verb|Pharo7.0-ccd1f64.sources|.
+
+    \item{\verb|.changes|}\\ лог-файл хранит все модификации исходного кода начиная с момента создания .sources-файла, в том числе все
+    изменения кода, которые делаете вы. При первоначальной установке релиза системы этот файл почти пуст, например
+    \verb|Pharo7.0.4-0-64bit-ccd1f64.changes|. В результате мы имеем полную историю всех модификаций методов, можем получить диффы
+    (разницу между версиями), и сделать откат кода на любой момент. Даже если вы не сохранили ваши правки\note{система была
+    остановлена аварийно, или вы просто забыли сделать снапшот в .image}, при следующем запуске вы сможете восстановиться из этого файла.\\
+    \verb|.sources|/\verb|.changes|\ всегда работают в паре.
+
+\end{description}
+
+Релиз \st-системы обязательно включает файлы .image и .changes, которые являются начальной точкой, с которой \emph{вы начинаете изменять
+систему под ваши задачи}. В процессе работы они изменяются, поэтому в них должна быть обязательно разрешена запись. Так как они очень тесно
+связаны между собой\note{и имеют одинаковые имена}, а .image хранит снимок состояния всех данных в системе,
+эти файлы нужно исключить из под контроля антивирусной системы. Не открывайте их в редакторах, и не позволяйте их изменять внешним
+программам и процессам, кроме самой виртуальной машины\ --- \emph{любое внешнее изменение этих файлов} приведет к рассогласованию и потере данных,
+в том числе полностью \emph{развалит систему}.
+
+Так как ваша работа настолько чувствительна к потере или порче этих файлов, обязательно делайте их регулярное резервное копирование
+\emph{с выключенной виртуальной машиной}. Кроме того, для резервного копирования вашего кода, отслеживания изменений, и обмена с другими
+программистами необходимо использовать \term{систему контроля версий}.
+
+
+\clearpage
+\subsecly{Настройка среды}
+
+\fig{img/firstrun.png}{width=\textwidth}
+
+\fig{img/settings.png}{height=.4\textheight}
+
+\begin{itemize}
+\item на скриншоте включена светлая тема для подготовки скриншотов
+\item для работы рекомендуется тема \texttt{Pharo Dark}
+\item шрифт увеличен чтобы этот мануал можно было читать на телефоне
+\end{itemize}    
+
+\fig{img/font.png}{height=\textheight}
