--- a/intro.tex
+++ b/intro.tex
@@ -13,8 +13,8 @@
 пока есть проблемы со шрифтами, совместима с ограниченным количеством систем, не поддерживаются архитектуры ARM и MIPS (Байкал-Т1)}.
 В результате пользователи не могут адаптировать \fl\ под
 свои задачи, и разработка завязана только на одного человека\note{vendor lock и в каком-то смысле bus factor\ --- достаточно чтобы
-\href{https://www.youtube.com/channel/UCI0qdIuuNMOdIoAA-5623rQ/videos}{Сергей Глушенко} забросил проект, или перевел его
-на комерческое лиценщирование, и масса пользователей останутся без развития и багфиксов для любимого инструмента}.
+\href{https://www.youtube.com/channel/UCI0qdIuuNMOdIoAA-5623rQ/videos}{Сергей Глушенко} забросил проект, или сделал его платным с высокой ценой,
+и масса пользователей останутся без развития и багфиксов для любимого инструмента}.
 
 Идеология \st\ прямо противоположна\ --- пользователю предоставляется полный доступ ко всем внутренностям системы, вы можете не только
 просмотреть исходный код любой системной компоненты до уровня байт-кода, но и внести в них собственные изменения. Возможности
@@ -24,3 +24,18 @@
 \st\ это штука специфическая\ --- это скорее не язык программирования, и не IDE, а \term{гостевая ОС}\ работающая поверх другой платформы,
 со своим языком, архитектурой, и именно этим объясняется ее изолированность, и определенные проблемы интеграции
 с другими языками программирования и сервисами \term{хост-системы}.
+
+\begin{itemize}[nosep]
+\item интерпретация\note{последние версии CogVM умеют JIT и оптимизации} байт-кода
+\item собственная графическая система\note{Squeak и \ph, но некоторые коммерческие системы умеют нативный GUI}
+\end{itemize}
+
+\noindent
+Чтобы воспользоваться магией \st\ и при этом обойти его изолированность, есть возможность применения
+\textit{метапрограммирования через генерацию кода}\ \ref{meta}:
+\begin{itemize}[nosep]
+\item \emph{модель задачи пишется на \st}\ в виде интерпретируемых структур данных,
+\item по модели \emph{синтезируется исходный код на mainstream языках} программирования (\java, \cpp,..).
+\item не требуется копировать код между проектами, вместо этого можно иметь общие разделяемымие части между моделями
+\item можно смешивать в одной модели описание программы, документацию, и спецификации
+\end{itemize}
