+ Alan Kay про язык \st
Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/header.tex
+++ b/header.tex
@@ -79,6 +79,7 @@ commentstyle=\color{blue}\textbf
 \newcommand{\win}{\texttt{Windows}}
 \newcommand{\linux}{\texttt{Linux}}
 \newcommand{\java}{\texttt{Java}}
+\newcommand{\ci}{$C$}
 \newcommand{\cpp}{$C_+^+$}
 \newcommand{\git}{\texttt{git}}
 
