--- a/interface.tex
+++ b/interface.tex
@@ -54,6 +54,17 @@
     которые позволяют изменять его как векторный графический объект\ --- двигать, менять размер, удалить, скопировать,..
 \end{description}
 
+\secrel{Полезные сочетания клавиш}
+
+При работе полезно знать и пользоваться сочетаниями клавиш для часто выполняемых действий:
+
+\begin{itemize}
+    \item \keys{Ctrl+Shift+S} сохранение текущего образа системы
+    \item \keys{Ctrl+W} закрытие текущего окна
+    \item \keys{Ctrl+O+W} Playground \ref{playground} ввод и выполнение кода (как команд)
+\end{itemize}
+
+\clearpage
 \secrel{Элементы заголовка окна}
 
 \fig{img/winmenu.png}{width=\textwidth}
