Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/baselang.tex
+++ b/baselang.tex
@@ -259,13 +259,7 @@ IBM поняла это, а Берроуз\ --- нет.
     \item нижняя часть\ --- интерактивный редактор кода аналогичный \ref{playground}
 \end{itemize}
 
-\clearpage
-\secrel{Class Browser: редактор кода}
-
-\fig{img/browser.png}{width=\textwidth}
-\clearpage
-
-Наиболее часто используемое окно\ --- просмотр и редактирование классов.
+\input{browser}
 
 \secrel{Monticello: управление репозиториями}
 
