--- a/bib.tex
+++ b/bib.tex
@@ -1,16 +1,16 @@
 \begin{thebibliography}{9}\addcontentsline{toc}{section}{Литература}
 
 \clearpage
-\bibitem{kir} \fig{img/kir.jpeg}{height=.75\textheight}\\
-\emph{Объектно-ориентированное программирование. Язык \st}\\
-Ю.А.Кирютенко, В.А.Савельев\\
-\url{https://www.ozon.ru/context/detail/id/149878112/}
-
-\clearpage
 \bibitem{lesnevsky} \fig{img/lesnevsky.png}{height=.75\textheight}\\
 \emph{Объектно-ориентированное программирование для начинающих}\\
 А.С.Лесневский\\
 \url{https://www.ozon.ru/context/detail/id/27465528/}
+
+\clearpage
+\bibitem{kir} \fig{img/kir.jpeg}{height=.75\textheight}\\
+\emph{Объектно-ориентированное программирование. Язык \st}\\
+Ю.А.Кирютенко, В.А.Савельев\\
+\url{https://www.ozon.ru/context/detail/id/149878112/}
 
 \clearpage
 
@@ -24,7 +24,7 @@ Xerox Palo Alto Research Center ISBN 0-201-11371-6. 344 pp. 1983
 \bibitem{red} \fig{img/red.png}{height=.25\textheight}\\
 \emph{Smalltalk-80, The Interactive Programming Environment}\\
 Adele Goldberg\\
-ISBN 0201113724. 560 pp. 1983
+ISBN 0-201-11372-4. 560 pp. 1983
 
 \bibitem{green} \fig{img/green.png}{height=.25\textheight}\\
 \emph{Smalltalk-80, Bits of History, Words of Advice}\\
@@ -46,5 +46,11 @@ School of Computer Science, Carleton University
 \emph{A Little Smalltalk}\\
 Tim Budd\\
 Addison-Wesley 1987.
+
+\bibitem{minsky} \fig{img/minsky.png}{height=.75\textheight}\\
+\emph{Фреймы для представления знаний}
+\href{https://royallib.com/book/minskiy_marvin/freymi_dlya_predstavleniya_znaniy.html}{online}\\
+Марвин Минский\\
+М.: Энергия, 1979
 
 \end{thebibliography}
