--- a/meta/meta.tex
+++ b/meta/meta.tex
@@ -1,2 +1,28 @@
 \secrel{Метапрограммирование}\label{meta}\secdown
+
+\term{Метапрограммирование}\ --- \textit{программы которые пишут программы}\\
+вид программирования, связанный с созданием программ, 
+которые \emph{порождают другие программы как результат своей работы}\ (в частности, на стадии компиляции их исходного кода), 
+либо программ, которые меняют себя во время выполнения (самомодифицирующийся код).
+
+\clearpage
+\term{Генерация кода} позволяет получать программы при меньших затратах времени и 
+усилий на кодирование, чем если бы программист писал их вручную целиком, 
+самомодификация позволяет улучшить свойства кода (размер и быстродействие),
+проводить оптимизации, используя статистику выполнения на реальных данных.
+
+Нас прежде всего интересует (кросс-)\term{трансляция моделей}, описанных через исполняемые структуры данных \ref{eds}
+на языке \st, с использованием всех фишек, предоставляемых \st-системой как IDE\note{гостевой операционной системой},
+расширяемой пользователем.
+
+Также стоит упомянуть что \st\ поддерживает метапрограммирование сам по себе. Используя системные классы,
+вы не только можете сгенерировать программу в виде строки и запустить встроенный компилятор, но и 
+работать на низком уровне непосредственно с байт-кодом.
+
+\input{meta/install}
+
+\input{meta/frame}
+
+\input{meta/eds}
+
 \secup
