--- a/header.tex
+++ b/header.tex
@@ -73,6 +73,7 @@ commentstyle=\color{blue}\textbf
 \newcommand{\lst}[2]{\lstinputlisting[title=#2]{#1}}
 
 %% languages
+\newcommand{\met}{\texttt{metaL}}
 \newcommand{\st}{\texttt{Smalltalk}}
 \newcommand{\ph}{\texttt{Pharo}}
 \newcommand{\fl}{\texttt{FLProg}}
@@ -82,6 +83,11 @@ commentstyle=\color{blue}\textbf
 \newcommand{\ci}{$C$}
 \newcommand{\cpp}{$C_+^+$}
 \newcommand{\git}{\texttt{git}}
+
+%% program elements
+\newcommand{\class}[1]{\textbf{\texttt{#1}}}
+\newcommand{\var}[1]{\texttt{#1}}
+\newcommand{\file}[1]{\texttt{#1}}
 
 % [nosep] option in lists/enums
 \usepackage{enumitem}
